--- a/index.html
+++ b/index.html
@@ -173,6 +173,22 @@
                         <span class="bg-gray-700 text-sm px-3 py-1 rounded-full text-gray-300">Regulatory Analysis</span>
                     </div>
                 </div>
+				<div class="grid md:grid-cols-2 lg:grid-cols-1 gap-8">
+                <!-- Project Card 2: A Study customer buying behaviour townwards online shopping at bargur town --><div class="bg-gray-800 p-8 rounded-xl shadow-lg border-l-4 border-blue-500 hover:shadow-2xl transition duration-300">
+                    <h3 class="text-2xl font-bold text-white mb-2">customer buying behaviour townwards online shopping at bargur town</h3>
+                    <p class="text-sm font-medium text-blue-400 mb-4">Focus Area: Finance</p>
+
+                    <p class="text-gray-300 leading-relaxed italic">
+                        "A Comparative Study customer buying behaviour townwards online shopping at bargur town: Compliance and Impact under online shopping Regimes"
+                    </p>
+
+                    <div class="mt-6 flex flex-wrap gap-3">
+                        <span class="bg-gray-700 text-sm px-3 py-1 rounded-full text-gray-300">Financial Modeling</span>
+                        <span class="bg-gray-700 text-sm px-3 py-1 rounded-full text-gray-300">Compliance</span>
+                        <span class="bg-gray-700 text-sm px-3 py-1 rounded-full text-gray-300">Accounts Analysis</span>
+                    </div>
+                </div>
+
 
             </div>
         </section>
@@ -336,4 +352,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
